# new-domain-researcher

./: ARCHITECTURE.md  CONTEXT.md  README.md  pyproject.toml
docs/: DEEP_RESEARCH_ASSISTED_LLM_WIKI_DESIGN.md  MEMORY_FORMAT.md
src/domain_researcher/: __init__.py  cli.py
src/domain_researcher/research/: __init__.py  deep_research_adapter.py  helloagents_runner.py  source_candidate.py
src/domain_researcher/research/deep_research/: __init__.py  agent.py  config.py
src/domain_researcher/research/deep_research/services/: notes.py  planner.py  reporter.py  search.py  summarizer.py  tool_events.py
src/domain_researcher/wiki/: __init__.py  bootstrap.py  ingest.py  lint.py  models.py  paths.py  raw_store.py  reader.py  writer.py
src/domain_researcher/workflows/: __init__.py  ingest_raw_to_wiki.py  research_to_raw.py
tests/: __init__.py  path_setup.py  test_deep_research_agent_run.py  test_raw_source_confirmation.py  test_raw_source_store.py  test_research_to_raw_flow.py  test_wiki_bootstrap.py  test_wiki_ingest.py  test_wiki_lint.py  test_wiki_query.py
