[project]
name = "new-domain-researcher"
version = "0.1.0"
description = "Deep Research assisted LLM Wiki prototype"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
