[project]
name = "new-domain-researcher"
version = "0.1.0"
description = "Deep Research assisted LLM Wiki prototype"
requires-python = ">=3.12"
dependencies = [
    "hello-agents==0.2.9",
    "tavily-python>=0.5.0",
    "python-dotenv==1.0.1",
    "requests>=2.31.0",
    "openai>=1.12.0",
    "ddgs>=9.6.1",
    "huggingface-hub>=0.36.0",
    "loguru>=0.7.3",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
